# lyrica

./: Cargo.toml  README.md
Docs/: API.md
crates/lyrica-cache/: Cargo.toml
crates/lyrica-cache/src/: lib.rs
crates/lyrica-core/: Cargo.toml
crates/lyrica-core/src/: config.rs  display.rs  lib.rs  player.rs  provider.rs
crates/lyrica-core/src/lyrics/: lrc.rs  lrcx.rs  mod.rs
crates/lyrica-display-gtk/: Cargo.toml
crates/lyrica-display-gtk/src/: lib.rs
crates/lyrica-display-tui/: Cargo.toml
crates/lyrica-display-tui/src/: lib.rs
crates/lyrica-player/: Cargo.toml
crates/lyrica-player/src/: lib.rs  macos.rs  mpris.rs
crates/lyrica-provider/: Cargo.toml
crates/lyrica-provider/src/: kugou.rs  lib.rs  lrclib.rs  netease.rs  qqmusic.rs
crates/lyrica-scheduler/: Cargo.toml
crates/lyrica-scheduler/src/: lib.rs
crates/lyrica-server/: Cargo.toml
crates/lyrica-server/src/: lib.rs
src/: main.rs
