[package]
name = "lyrica-display-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
lyrica-core = { path = "../lyrica-core" }
lyrica-provider = { path = "../lyrica-provider" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
ratatui = "0.29"
crossterm = "0.28"
