[package]
name = "lyrica-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
lyrica-core = { path = "../lyrica-core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
