[package]
name = "lyrica-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lyrica-core = { path = "../lyrica-core" }
lyrica-provider = { path = "../lyrica-provider" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
